--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':laxture_lib')
     compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.android.support:design:25.0.0'
-    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:design:25+'
+    compile 'com.android.support:appcompat-v7:25+'
 }
