--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    buildToolsVersion "$android_buildToolsVersion"
 
     defaultConfig {
         minSdkVersion 15
@@ -39,6 +39,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':laxture_lib')
     compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.android.support:design:25+'
-    compile 'com.android.support:appcompat-v7:25+'
+    compile "com.android.support:design:$android_supportVersion"
+    compile "com.android.support:appcompat-v7:$android_supportVersion"
 }
