--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':laxture_lib')
-    compile 'com.google.code.gson:gson:2.3.1'
+    compile project(path: ':laxture_lib')
+    compile 'com.google.code.gson:gson:2.8.0'
     compile "com.android.support:design:$android_supportVersion"
     compile "com.android.support:appcompat-v7:$android_supportVersion"
 }
